# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2022_03_17_103847) do
+ActiveRecord::Schema[7.0].define(version: 2022_03_17_110138) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "citext"
   enable_extension "plpgsql"
@@ -22,6 +22,15 @@ ActiveRecord::Schema[7.0].define(version: 2022_03_17_103847) do
     t.datetime "updated_at", null: false
   end
 
+  create_table "shares", force: :cascade do |t|
+    t.bigint "user_id", null: false
+    t.bigint "medium_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["medium_id"], name: "index_shares_on_medium_id"
+    t.index ["user_id"], name: "index_shares_on_user_id"
+  end
+
   create_table "users", force: :cascade do |t|
     t.string "first_name", null: false
     t.string "last_name", null: false
@@ -31,4 +40,6 @@ ActiveRecord::Schema[7.0].define(version: 2022_03_17_103847) do
     t.index ["email"], name: "index_users_on_email", unique: true
   end
 
+  add_foreign_key "shares", "media"
+  add_foreign_key "shares", "users"
 end
